--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<ul>
-		<li><a href="/saga-vs-middleware/">Saga vs. Middleware</a></li>
+		<li><a href="./saga-vs-middleware/">Saga vs. Middleware</a></li>
 	</ul>
 </body>
 </html>
