--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
           <ul>
 						<li>
-							<a href="./presentations/saga-vs-middleware/index.html">redux-saga vs. custom middleware</a>
+							<a href="./presentations/saga-vs-middleware/index.html">redux saga vs. custom middleware</a>
 						</li>
 					</ul>
         </section>
