Update title slide

--- a/presentations/saga-vs-middleware/index.html
+++ b/presentations/saga-vs-middleware/index.html
@@ -27,7 +27,7 @@
     <div class="reveal">
       <div class="slides">
         <section>
-          <h2>Redux Saga <div><img class="plain" style="height: 100px;" src="./vs.png" alt="versus"></div> Redux Middleware</h2>
+          <h2>Redux Saga <div><img class="plain" style="height: 100px;" src="./vs.png" alt="versus"></div> Custom Middleware</h2>
         </section>
         <section>
           <h3>Problems with Sagas</h3>
