--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>reveal.js</title>
+    <title>Engineering Excellence Presentations</title>
 
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/league.css">
@@ -30,8 +30,10 @@
           <ul>
 						<li>
               <a href="./presentations/saga-vs-middleware">redux saga vs. custom middleware</a>
+            </li>
+            <li>
               <a href="./presentations/anatomy-of-a-good-unit-test">Anatomy of a Good Unit Test</a>
-						</li>
+            </li>
 					</ul>
         </section>
       </div>
