--- a/presentations/anatomy-of-a-good-unit-test/index.html
+++ b/presentations/anatomy-of-a-good-unit-test/index.html
@@ -193,7 +193,7 @@ it('renders a the warning message'){ // poor title
             </ul>
           </section>
 	  <section>
-            <h4>C# Example</h4>
+            <h4>A C# Example</h4>
 	    <pre class="stretch">
 	      <code class="cs" data-trim>
 [TestMethod]
@@ -202,7 +202,7 @@ public void GetRelatedLocation_GetsLocation()
 {
     // Arrange
     _locationsRepository
-	.Setup(r => r.GetRelatedLocation(It.IsAny\<int\>(), It.IsAny\<string\>(), It.IsAny\<string\>()))
+	.Setup(r => r.GetRelatedLocation(It.IsAny<int>(), It.IsAny<string>(), It.IsAny<string>()))
 	.Returns(new LocationSummary());
 
     // Act
@@ -235,12 +235,15 @@ it('renders does not render a warning message if warning is falsy'){
 }
               </code>
             </pre>
+	    <ul>
+              <li>This will give you 100% coverage</li>
+              <li>And correctly assert when <em>[data-test="warning"]</em> is displayed</li>
+            </ul>
           </section>
-
           <section>
             <ul>
               <li>These tests will give you 100% coverage</li>
-              <li>And correctly assert when <em>[data-test="warning"]</em> is displayed</li>
+              <li>And correctly assert that the result is not null, but what is being asserted?</li>
             </ul>
           </section>
         </section>
