--- a/presentations/anatomy-of-a-good-unit-test/index.html
+++ b/presentations/anatomy-of-a-good-unit-test/index.html
@@ -215,7 +215,7 @@ public void GetRelatedLocation_GetsLocation()
 	      </code>
 	    </pre>
             <ul>
-              <li>These tests will give you 100% coverage</li>
+              <li>This test will give you 100% coverage</li>
               <li>And correctly assert that the result is not null, but what is being asserted?</li>
             </ul>
 	  </section>
