add what is docker

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li>
               <a href="./presentations/anatomy-of-a-good-unit-test">Anatomy of a Good Unit Test</a>
             </li>
+            <li>
+              <a href="./presentations/what-is-docker">What is Docker</a>
+            </li>
 					</ul>
         </section>
       </div>
