--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="./presentations/saga-vs-middleware">redux saga vs. custom middleware</a>
             </li>
             <li>
-              <a href="./presentations/anatomy-of-a-good-unit-test">Anatomy of a Good Unit Test</a>
+              <a href="./presentations/good-vs-bad-unit-tests">Good vs. Bad unit tests (What make a good unit test)</a>
             </li>
             <li>
               <a href="./presentations/what-is-docker">What is Docker</a>
