update import maps

--- a/presentations/import-maps/index.html
+++ b/presentations/import-maps/index.html
@@ -45,7 +45,7 @@
         <section>
           <h2><a href="https://github.com/WICG/import-maps#the-basic-idea" target="_blank">What are import maps</a></h2>
           <ul>
-            <li>A browser native mechanism to import dependencies at runtime</li>
+            <li>A browser native mechanism (ECMA Script Modules) to import dependencies at runtime</li>
             <li>No longer bundle entire UI into a single chunk</li>
             <li>Local libs and/or remote libs</li>
             <li>Imports need to be ES modules</li>
@@ -68,8 +68,8 @@
         <section>
           <h2>How to retrieve the latest remote library</h2>
           <ul>
-            <li><a href="https://np-cdn.chrobinson.com/libs/@chr/online-shared-microsite-core@7" target="_blank">https://np-cdn.chrobinson.com/libs/@chr/online-shared-microsite-core@7</a></li>
-            <li><a href="https://cdn.chrobinson.com/remote-libs/@chr/online-shared-microsite-core/7.0.17/index.es.js" target="_blank">https://cdn.chrobinson.com/remote-libs/@chr/online-shared-microsite-core/7.0.17/index.es.js</a></li>
+            <li>Latest version for major version: <a href="https://np-cdn.chrobinson.com/libs/@chr/online-shared-microsite-core@7" target="_blank">https://np-cdn.chrobinson.com/libs/@chr/online-shared-microsite-core@7</a></li>
+            <li>ES module for specific version: <a href="https://cdn.chrobinson.com/remote-libs/@chr/online-shared-microsite-core/7.0.17/index.es.js" target="_blank">https://cdn.chrobinson.com/remote-libs/@chr/online-shared-microsite-core/7.0.17/index.es.js</a></li>
           </ul>
         </section>
 
